--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
   "name": "electron-app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "First Electron App",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish"
   },
   "author": "Ferdinand Meyer",
   "license": "ISC",
   "devDependencies": {
     "@electron-forge/cli": "^6.4.1",
+    "@electron-forge/maker-deb": "^6.4.1",
+    "@electron-forge/maker-rpm": "^6.4.1",
+    "@electron-forge/maker-squirrel": "^6.4.1",
+    "@electron-forge/maker-zip": "^6.4.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.4.1",
+    "@electron-forge/publisher-github": "^6.4.1",
     "electron": "^24.3.1"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.0",
     "league-connect": "^6.0.0-rc12"
   }
 }
