--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "First Electron App",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish"
